Additional fix for processwire/processwire-issues#602 add z-index to InputfieldRepeater to prevent lost outline at bottom of field when repeater depth enabled

--- a/wire/modules/Fieldtype/FieldtypeRepeater/InputfieldRepeater.scss
+++ b/wire/modules/Fieldtype/FieldtypeRepeater/InputfieldRepeater.scss
@@ -127,6 +127,7 @@
 }
 
 .InputfieldRepeater {
+	z-index: 1; 	
 	
 	.InputfieldWrapper,
 	.InputfieldWrapper > .Inputfields {
